<resources>
    <string name="app_name" translatable="false">Fitness Tracker</string>
    <string name="label_bmi">BMI</string>
    <string name="label_bmr">BMR</string>
    <string name="weight">Wight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="bmi_desc">BMI is the scronym for Body Mass Index which is used to evaluate the weight of a person based on their height and
indicate if they have the ideal weight, or if it is above or below that value.\n\nFill in the blanks with a wight and a height to calculate your BMI</string>
    <string name="calc">Calculate</string>
    <string name="fields_message">The blanks must be filled with non-zero numbers</string>
    <string name="bmi_severely_low_weight">Severely below ideal</string>
    <string name="bmi_very_low_weight">Very below ideal</string>
    <string name="bmi_low_weight">Below ideal</string>
    <string name="normal">Ideal</string>
    <string name="bmi_high_weight">Overweight</string>
    <string name="bmi_so_high_weight">Moderately overweight</string>
    <string name="bmi_severely_high_weight">Severely overweight</string>
    <string name="bmi_extreme_weight">Extremely overwight</string>
    <string name="bmi_response">BMI: %1$.2f</string>
    <string name="save">Save</string>
    <string name="calc_saved">Record successfully saved</string>
    <string name="calc_removed">Record deleted successfully</string>
    <string name="search">Search</string>
    <string name="bmr_desc">BMR is te number that indicates the amount of calorie that the body needs based on your lifestyle</string>
    <string name="age">Age</string>
    <string name="bmr_response">BMR: %1$.2f</string>
    <string name="delete_message">Are you sure you want to delete the record?</string>
    <string name="cancel">Cancel</string>
    <string name="bmi_label">IMC</string>
    <string name="bmr_label">TBM</string>
    <string name="registred_on">Registered on:</string>
    <string name="bmr_item_little">Little or no exercise</string>
    <string name="bmr_item_light">Light exercise. 1 to 3 days a week</string>
    <string name="bmr_item_moderate">Moderate exercise. 3 to 5 days a week</string>
    <string name="bmr_item_heavy">Heavy exercise. 6 to 7 days a week</string>
    <string name="bmr_item_heavy_daily">Heavy exercise daily and up to 2 times a day</string>
    <string name="records">Records</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete this record?</string>
    <string name="delete_success">Record deleted successfully</string>
    <string name="delete_error">Error deleting record</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_delete">Do you want to delete this record?</string>
</resources>