<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".BmiActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewForm"
            android:text="@string/bmr_desc" />

        <EditText
            android:id="@+id/edtBmrWeight"
            android:hint="@string/weight"
            style="@style/EditTextForm" />

        <EditText
            android:id="@+id/edtBmrHeight"
            android:hint="@string/height"
            style="@style/EditTextForm" />

        <EditText
            android:id="@+id/edtBmrAge"
            android:hint="@string/age"
            style="@style/EditTextForm" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autoLifestyle"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnBmrSend"
            android:text="@string/calc"
            style="@style/ButtonForm" />
    </LinearLayout>
</ScrollView>